--- a/svag演示.html
+++ b/svag演示.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVGA Animation in HTML</title>
-    <script src="http://cdn.jsdelivr.net/npm/svga.lite/svga.lite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/svga.lite/svga.lite.min.js"></script>
     <style>
         /* 你可以根据需要添加样式 */
         #svgaCanvas {
